handlersocket extension changelog

Version 0.0.5
-------------
	* Fixed executeUpdate, executeDelete.
	* Fixed handlersocket_set_error.

Version 0.0.4
-------------
	* Updated executeSingle arguments.
	* Fixed executeDelete.
	* Version PHP 5 or newer.
	* Added examples tests scripts.

Version 0.0.3
-------------
	* Fixed bug undefine fields.

Version 0.0.2
-------------
	* Fixed bug thread safety.
	* Added support PHP 5.2.0+.

Version 0.0.1
-------------
	* Initial release.